# FreeRTOS-Win32-MinGW

./: CMakeLists.txt  main_full.c
